[package]
name = "functional-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
dotenvy = "0.15"
serde = { workspace = true }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "uuid",
    "chrono",
] }
tokio = { workspace = true }
